---
title: janis_soccer_stat
---
erDiagram
    COUNTRIES ||--o{ TEAMS : has
    COUNTRIES ||--o{ COMPETITIONS : hosts
    COMPETITIONS ||--o{ SEASONS : has
    TEAMS ||--o{ MATCHES : home_team
    TEAMS ||--o{ MATCHES : away_team
    MATCHES ||--o{ MATCH_STATS : has
    TEAMS ||--o{ MATCH_STATS : has

    COUNTRIES {
        int id PK
        string name
    }
    TEAMS {
        int id PK
        string name
        int country_id FK
    }
    COMPETITIONS {
        int id PK
        string name
        string type
        int country_id FK
    }
    SEASONS {
        int id PK
        int competition_id FK
        string label
    }
    MATCHES {
        int id PK
        int season_id FK
        int home_team_id FK
        int away_team_id FK
        date match_date
        string round
        int home_score
        int away_score
        string status
        string source_match_id
        timestamp scraped_at
    }
    MATCH_STATS {
        int id PK
        int match_id FK
        int team_id FK
        int shots
        int shots_on_target
        float possession
        int corners
        int fouls
        int yellow_cards
        int red_cards
    }
